增加 strapdown 一个可以写markdown的js 大赞！！

--- a/index.html
+++ b/index.html
@@ -29,8 +29,16 @@
     </div>
 
     <!-- MAIN CONTENT -->
-	<h1>各种有趣的插件集合 慢慢列出来</h1>
-	<a href="jquery.adaptive-backgrounds.js/README.md"></a>
+    <div id="main_content_wrap" class="outer">
+        <div id="main_content" class='inner'>
+        	<h1>各种有趣的插件集合 慢慢列出来</h1>
+            <ul>
+                <li><a href="jquery.adaptive-backgrounds.js/README.md">自动填充背景色jquery.adaptive-backgrounds.js</a></li>
+                <li><a href="strapdown">jquery.adaptive-backgrounds.js</a></li>
+            </ul>
+        </div>
+  	</div>
+    
 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
