--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         	<h1>各种有趣的插件集合 慢慢列出来</h1>
             <ul>
                 <li><a href="jquery.adaptive-backgrounds.js/README.md">自动填充背景色jquery.adaptive-backgrounds.js</a></li>
-                <li><a href="strapdown">jquery.adaptive-backgrounds.js</a></li>
+                <li><a href="strapdown">strapdown.js</a></li>
             </ul>
         </div>
   	</div>
